# CMSIS-NN

./: CMakeLists.txt
Source/BasicMathFunctions/: arm_elementwise_mul_s16.c
Source/PoolingFunctions/: arm_avgpool_s16.c  arm_avgpool_s8.c
